2015. 5. 4. Reflected modification of zOptionRead. [app]
2015. 4.30. Removed zVec3DElem, zVec6DElem, zMat3DElem and zMat3DVec from sources. [all]
2015. 4.29. Debugged rkLinkUpdateRate. [rk_link]
2015. 4.25. Added rkChain2VertList. [rk_chain]
2015. 4.22. Added zkc2z3d. [app]
2015. 4.21. Debugged _rkCDColChkOBBVert (thanks to Ken'ya Tanaka and Naoki Wakisaka). [rk_cd]
2015. 4.15. Debugged rk_mp, rk_fk and rk_id. [app]
2015. 4.14. Added rkIKCellRegAM. [rk_ik]
2015. 4.14. Abolished motortype field in rkJointQueryFRead. [rk_joint_*]
2015. 4.14. Reimplemented rkIKConfFRead and rkIKConfReadFile. [rk_ik, app]
2015. 4. 9. Reimplemented forward dynamics with Naoki Wakisaka's contribution. [rk_motor*,, rk_joint*, rk_link, rk_abi, rk_fd]
2015. 3.31. Added rk_cd with Ken'ya Tanaka's contribution. [rk_cd]
2015. 3.30. Added attribute mask to rkIKCellInit and rkIKCellReg. [rk_ik_cell, rk_ik]
2015. 3.30. Renamed rkIKCell*Mask to rkIKCell*Mode. [rk_ik_cell]
2015. 3.30. Debugged rkIKCellInit. [rk_ik_cell]
2015. 3.25. Debugged rkIKCellReg (thanks to Ken'ya Tanaka and Naoki Wakisaka). [rk_ik]
2015. 2.14. Created rkChainMShape3DReadFile. [rk_chain]
2015. 2.14. Created z3d2zkc. [app]
2015. 2.14. Applied zGetBasename. [app]
2015. 2. 9. Applied cure-config-gen. [app]
2015. 1.15. Renamed rkIKItem to rkIKCellAttr. [rk_ik_cell, rk_ik, rk_ik_imp]
2015. 1. 7. Added roki-config. [app]
2015. 1. 5. Reflected renamed zSCSet to zSinCos. [rk_joint_revol, rk_joint_cylin, rk_joint_hooke]
2014. 4.28. Debugged _rkIKCellInfoFRead (thanks to Soichi Tsuchikabe). [rk_ik]
2014. 1. 6. Debugged rkIKLinkL2LAttErr. [rk_ik_cell]
2013.12.19. Abolished the total frame of a link. [rk_link, rk_chain, rk_jacobi, rk_ik_cell, rk_ik, rk_ik_imp]
2013.11. 7. Added rkIKCellRegL2LPos and rkIKCellRegL2LAng. [rk_ik]
2013.10.14. Added rkIKCellAcmClear and rkIKAcmClear. [rk_ik_cell, rk_ik]
2013. 8.23. Modified rkIKAcmPos and rkIKAcmAtt for faster convergence. [rk_ik_cell]