@@ -5,4 +5,4 @@
 
 PREFIX=$(HOME)/usr
 PROJNAME=roki
-VERSION=1.0.0-beta5
+VERSION=1.0.0-beta6
